--- a/package.json
+++ b/package.json
@@ -12,12 +12,20 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@mdx-js/react": "^3.1.0",
+    "@mdx-js/rollup": "^3.1.0",
     "@tailwindcss/vite": "^4.0.12",
+    "gray-matter": "^4.0.3",
+    "js-yaml": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
-    "tailwindcss": "^4.0.12"
+    "remark-frontmatter": "^5.0.0",
+    "remark-parse": "^11.0.0",
+    "tailwindcss": "^4.0.12",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
