--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@mdx-js/react": "^3.1.0",
     "@mdx-js/rollup": "^3.1.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.0.12",
     "gray-matter": "^4.0.3",
     "js-yaml": "^4.1.0",
@@ -22,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "remark-frontmatter": "^5.0.0",
+    "remark-gfm": "^4.0.1",
     "remark-parse": "^11.0.0",
     "tailwindcss": "^4.0.12",
     "unified": "^11.0.5",
